setup graphql client

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-react",
+  "name": "udemy-graphql-with-react-intro-search-repos",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
